test/tests/stages/15_arrays_and_pointer_arithmetic/valid/extra_credit/compound_bitwise_subscript.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[141]:
  int
  identifier(main)
  (
  void
  )
  {
  unsigned
  long
  identifier(arr)
  [
  const int(4)
  ]
  =
  {
  const long(2147483648l)
  ,
  const unsigned long(18446744069414584320ul)
  ,
  const unsigned long(9223372036854775808ul)
  ,
  const long(1085102592571150095l)
  }
  ;
  identifier(arr)
  [
  const int(1)
  ]
  &=
  identifier(arr)
  [
  const int(3)
  ]
  ;
  if
  (
  identifier(arr)
  [
  const int(1)
  ]
  !=
  const int(1085102592318504960)
  )
  {
  return
  const int(1)
  ;
  }
  identifier(arr)
  [
  const int(0)
  ]
  |=
  identifier(arr)
  [
  const int(1)
  ]
  ;
  if
  (
  identifier(arr)
  [
  const int(0)
  ]
  !=
  const unsigned long(1085102594465988608ul)
  )
  {
  return
  const int(2)
  ;
  }
  identifier(arr)
  [
  const int(2)
  ]
  ^=
  identifier(arr)
  [
  const int(3)
  ]
  ;
  if
  (
  identifier(arr)
  [
  const int(2)
  ]
  !=
  const unsigned long(10308474629425925903ul)
  )
  {
  return
  const int(3)
  ;
  }
  identifier(arr)
  [
  const int(3)
  ]
  >>=
  const int(25)
  ;
  if
  (
  identifier(arr)
  [
  const int(3)
  ]
  !=
  const long(32338577287l)
  )
  {
  return
  const int(4)
  ;
  }
  identifier(arr)
  [
  const int(1)
  ]
  <<=
  const int(12)
  ;
  if
  (
  identifier(arr)
  [
  const int(1)
  ]
  !=
  const unsigned long(17361640446303928320ul)
  )
  {
  return
  const int(5)
  ;
  }
  return
  const int(0)
  ;
  }
