test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_types/conflicting_array_declarations.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[25]:
  int
  identifier(arr)
  [
  const int(6)
  ]
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  identifier(arr)
  [
  const int(0)
  ]
  ;
  }
  int
  identifier(arr)
  [
  const int(5)
  ]
  ;
